bk_ida/gccida/c0/expected_value_to_br_prob
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expected_value_to_br_prob/src/predict.c:1035:24: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v1 = gen_rtx_fmt_ee( ( rtx_code)( unsigned __int16)*( _DWORD *)v0, VOIDmode, *( rtx *)&ev[1], *( rtx *)&v0[1]); 
                       ^~~~~~~~
                       rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expected_value_to_br_prob/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expected_value_to_br_prob/src/predict.c:1035:35: error: expected expression
v1 = gen_rtx_fmt_ee( ( rtx_code)( unsigned __int16)*( _DWORD *)v0, VOIDmode, *( rtx *)&ev[1], *( rtx *)&v0[1]); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expected_value_to_br_prob/src/predict.c:1039:48: error: use of undeclared identifier 'prediction'; did you mean 'predict_insn'?
predict_insn_def( insn, PRED_BUILTIN_EXPECT, ( prediction)( cond == const_true_rtx)); 
                                               ^~~~~~~~~~
                                               predict_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expected_value_to_br_prob/src/predict.c:95:1: note: 'predict_insn' declared here
predict_insn (insn, predictor, probability)
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expected_value_to_br_prob/src/predict.c:1039:46: error: passing 'void' to parameter of incompatible type 'unsigned int'
predict_insn_def( insn, PRED_BUILTIN_EXPECT, ( prediction)( cond == const_true_rtx)); 
                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expected_value_to_br_prob/src/predict.c:1050:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
ev = ( rtx)insn[2]; 
           ^~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expected_value_to_br_prob/src/obj/predict.o] Error 1
